; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_stream_write.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_stream_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checkout_stream = type { i32, i32 }

@GIT_ERROR_OS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"could not write to '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64)* @checkout_stream_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_stream_write(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.checkout_stream*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = bitcast i32* %9 to %struct.checkout_stream*
  store %struct.checkout_stream* %10, %struct.checkout_stream** %7, align 8
  %11 = load %struct.checkout_stream*, %struct.checkout_stream** %7, align 8
  %12 = getelementptr inbounds %struct.checkout_stream, %struct.checkout_stream* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @p_write(i32 %13, i8* %14, i64 %15)
  store i32 %16, i32* %8, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  %19 = load i32, i32* @GIT_ERROR_OS, align 4
  %20 = load %struct.checkout_stream*, %struct.checkout_stream** %7, align 8
  %21 = getelementptr inbounds %struct.checkout_stream, %struct.checkout_stream* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @git_error_set(i32 %19, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %18, %3
  %25 = load i32, i32* %8, align 4
  ret i32 %25
}

declare dso_local i32 @p_write(i32, i8*, i64) #1

declare dso_local i32 @git_error_set(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
